--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
             for (let i = 0; i < articles.length; i++) {
               let title = articles[i]["title"];
               let content = articles[i]["content"];
-              let file = articles[i]["file"] || "/static/default.jpg";
+              let file = articles[i]["file"] || "default.jpg";
               let time = articles[i]['time'] || '????.??.??';            
 
               let profile = articles[i]["profile"];
